# slice-oas-by-resource

./: .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  pyproject.toml
.github/workflows/: test.yml
.specify/memory/: constitution.md
docs/: USAGE.md  VALIDATION_PHASES.md  VERSION_CONVERSION.md
history/adr/: ADR-001.md  ADR-002.md  ADR-003.md  ADR-004.md  ADR-005.md  ADR-006.md  ADR-007.md  ADR-008.md
specs/001-slice-oas-by-resource/: data-model.md  implementation-plan.md  phase5-plan.md  phase6-plan.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-slice-completeness-fix/: data-model.md  plan.md  quickstart.md  requirements-gap-analysis.md  research.md  spec.md  tasks.md
src/slice_oas/: __init__.py  __main__.py  batch_processor.py  cli.py  converter.py  csv_manager.py  exceptions.py  filters.py  generator.py  models.py  output_manager.py  parser.py  progress.py  resolver.py  slicer.py  transformation_rules.json  validator.py
tests/: conftest.py
tests/fixtures/: malformed.yaml  oas_3_0_circular.yaml  oas_3_0_complex.yaml  oas_3_0_simple.yaml  oas_3_1_advanced.yaml  oas_3_1_circular.yaml  oas_3_1_simple.yaml  oas_batch_test.yaml  oas_with_all_component_refs.yaml  oas_with_callback_refs.yaml  oas_with_header_refs.yaml  oas_with_link_refs.yaml  oas_with_parameter_refs.yaml  oas_with_requestbody_refs.yaml  oas_with_response_refs.yaml  oas_with_security_refs.yaml
tests/integration/: test_batch_extraction.py  test_component_resolution.py  test_csv_generation.py  test_e2e_workflow.py  test_edge_cases.py  test_large_files.py  (+5 more)
(+34 files in other folders)
